# rust-elm-protobuf-template

./: .gitignore  Cargo.toml  Makefile
elm/: elm.json
elm/src/: Main.elm
protobuf/: person.proto
src/: main.rs
src/protobuf/: person.rs
static/: Main.js
templates/: index.html
