[package]
name = "rust-elm-protobuf-template"
version = "0.1.0"
authors = ["Spencer Pearson <speeze.pearson+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2"
actix-web = "3"
actix-files = "0.4.1"
tera = "1"
base64 = "0.13.0"
